# PE_Scanner

./: .dockerignore  .gitignore  AGENTS.md  API_DOCUMENTATION.md  AUTH_SETUP_GUIDE.md  BACKEND_AUTH_INTEGRATION.md  Changelog.md  DEPLOY_NOW.md  Dockerfile  PROJECT_INITIALIZATION.md  Procfile  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  SOCIAL_CARDS_GUIDE.md  USAGE.md  config.yaml  pyproject.toml  railway.json  requirements.txt  test_api.py  test_api_detailed.py
.cursor/rules/: design-system.mdc  seo.mdc
.cursor/session-summaries/: 2025-12-01-session.md
.cursor/skills/: README.md  email-touchpoint-mapper.md  prd-progress-tracker.md  project-scaffolder.md  scaling-calculator.md  skill-import-assistant.md
.taskmaster/: state.json
.taskmaster/docs/: agent_handover_2024_12_02.md  agent_handover_2024_12_02_color_rebrand.md  agent_handover_2024_12_02_dashboard_redesign.md  agent_handover_2024_12_02_final_deployment.md  agent_handover_2024_12_02_rate_limiting_complete.md  agent_handover_2024_12_02_task_39_complete.md  color_scheme_analysis.md  color_scheme_comparison.md  color_scheme_implementation_summary.md  dashboard_redesign_summary.md  gap_analysis_summary.md  hero_headline_alternatives.md  messaging_analysis_lateral_thinking.md  messaging_improvements_summary.md  paid_marketing_strategy_10_per_week.md  pirouette_patterns_analysis.md  portfolio_rate_limiting_strategy.md  prd.txt  prd_v2_enhancements.txt  pricing_strategy_analysis.md  rate_limit_ui_conversion_improvement.md  social_cards_anchor_enhancement.md  social_cards_implementation_summary.md  task_26_completion_summary.md  task_27_completion_summary.md  task_28_completion_summary.md  task_28_readiness_check.md  task_29_completion_summary.md  task_32_completion_summary.md  task_34_completion_summary.md  (+11 more)
examples/: SOCIAL_CARD_EXAMPLES.md  headline_demo.py  social_card_generator.py  social_card_usage.md
portfolios/: example_isa.csv
tests/: conftest.py
web/: README.md  env.example  middleware.ts  package-lock.json  package.json  playwright.config.ts
(+93 files in other folders)
